--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "com.unarin.cordova.beacon"
   ],
   "cordovaPlatforms": [
     "ios",
