--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angular2": "2.0.0-beta.7",
+    "angular2-google-maps": "^0.9.0",
     "angularfire2": "^2.0.0-alpha.13",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.13",
